# CHfCGS

./: .gitignore  .gitmodules  README.md  build.sh  edge_diff.sh  run.sh  run_ch_constructor.sh  run_clang_ch_constructor.sh  run_valgrind_ch_constructor.sh  run_valgrind_ch_measurer.sh  testCH.sh  view.sh  zoomtest.sh
chconstructor/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  compile_commands.json
chconstructor/nbproject/: configurations.xml  project.xml
chconstructor/nbproject/private/: Default.properties  configurations.xml  private.xml
chconstructor/src/: 4Dgrid.h  DouglasPeucker.h  bounding_box.h  cdt_matching.h  ch_constructor.cpp  ch_constructor.h  chainDetector.h  chainPairDP.h  chains.h  chgraph.h  dead_end_detector.h  dijkstra.h  discreteFrechet.h  dpPrioritizer.h  edgeWeight.h  file_formats.cpp  file_formats.h  file_formats_helper.h  geoFunctions.h  graph.h  grid.h  matchChainPairNodes.h  nodes_and_edges.cpp  nodes_and_edges.h  prioritizer.h  prioritizers.h  s_options.h  self_intersection_checker.h  unit_tests.cpp  unit_tests.h
chconstructor/src/backup/: DouglasPeucker.h  chainDetector (Kopie).h  chainDetectorRetro.h  chgraph.h  dpPrioritizer (Kopie).h  grid (Kopie).h  prioritizers.h
chconstructor/src/simplification/: cdt_matching.h  cross_border.h  discreteCurveEvolution.h  dp_simplifier.h  error_measure.h  lineSimplifier.h  lineSimplifierType.h  matchChainPairNodes.h  match_functions.h  nth_point_simplifier.h  pairMatchType.h  perfect_matching.h  prio_nodes.h  zip_order.h
chconstructor/test_data/: 15kSZHK.txt  cdt_matchingTest.txt  cdt_matchingTest2.txt
chmeasurer/: .gitignore  CMakeLists.txt  CMakeLists.txt~  create-build.sh  run.sh  valgrind_test.sh
chmeasurer/src/: 4Dgrid.h  CHDijkstraBACKUP.h  ILP_data.h  assdfAS.txt  cdthp_cross.h  ch_measurer.cpp  ch_measurer.cpp~  ch_measurer.h  ch_parser.h  ch_parser.h~  chainDetector.h  chains.h  chgraph.h  chgraph.h~  defs.h  dijkstra.h  discreteFrechet.h  edgeWeight.h  enum_array.h  enum_helpers.h  enum_helpers.h~  errorCount.h  geoFunctions.h  grid.h  indexed_container.h  indexed_container.h~  lineSimplificationILP.h  lp.txt  measure_options.h  nodes_and_edges.h  nodes_and_edges.h~  p_ilp_solution.txt  parallelLineSimplficationILP.h  range_tree.h  rayCaster.h  run_tests.cpp  self_intersection_checker.h  solution.txt  track_time.h  unit_tests.cpp  (+3 more)
chmeasurer/src/CGAL/: cdthp_cross.h  range_tree.h  self_intersection_checker.h
chmeasurer/src/ILP/: ILP_data.h  calc_frechet.h  calculation.h  data.h  frechetLP.h  frechet_test_data.h  lineSimplificationILP.h  linearProgram.h  parallelLineSimplficationILP.h  prllelLineSimplficationFrechet.h
chmeasurer/src/simple_measures/: angular_change.h  consistency.h  regularity.h
chmeasurer/test_data/: 15kSZHK_ch_out.graph  DijkstraTest_ch_out.graph  ProDPExample_ch_out.graph  ProP_ILPChainPair_ch_out.graph
data/CH/: README.md
data/Graph/: ChainPair2FMAXSPEED.txt  ChainPairFMAXSPEED.txt  IntersectionFMAXSPEED.txt  ProDPExampleFMAXSPEED.txt  ZipOrderingTestFMAXSPEED.txt  basicLineFMAXSPEED.txt
data/OSM/: README.md
simplestGraphRendering-master/: CMakeLists.txt  zusätzliche_Linkerflags.txt
simplestGraphRendering-master/src/: ch_Parser.h  edge_f.glsl  geoFunctions.h  nodesAndEdges.h  simplestGraphRendering.cpp  widthAndColors.h  zoomer.h
